--- a/SpeechSignalAnalysisSystem/freqyres.ui
+++ b/SpeechSignalAnalysisSystem/freqyres.ui
@@ -28,7 +28,7 @@
         <widget class="QGroupBox" name="groupBox_3">
          <property name="maximumSize">
           <size>
-           <width>200</width>
+           <width>400</width>
            <height>16777215</height>
           </size>
          </property>
@@ -49,8 +49,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>176</width>
-               <height>318</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
@@ -125,235 +125,162 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>176</width>
-               <height>318</height>
+               <width>98</width>
+               <height>129</height>
               </rect>
              </property>
              <attribute name="label">
               <string>高通滤波器</string>
              </attribute>
-             <widget class="QLineEdit" name="parameter_edit_HP">
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>178</y>
-                <width>154</width>
-                <height>24</height>
-               </rect>
-              </property>
-             </widget>
-             <widget class="QLineEdit" name="order_edit_HP">
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>68</y>
-                <width>154</width>
-                <height>24</height>
-               </rect>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_9">
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>110</y>
-                <width>154</width>
-                <height>50</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>50</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>参数：</string>
-              </property>
-             </widget>
-             <widget class="QPushButton" name="affirm_but_HP">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>220</y>
-                <width>154</width>
-                <height>28</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>确认</string>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>20</width>
-                <height>20</height>
-               </size>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_10">
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>0</y>
-                <width>154</width>
-                <height>50</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>50</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>阶数：</string>
-              </property>
-             </widget>
+             <layout class="QGridLayout" name="gridLayout_3">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_10">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>阶数：</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLineEdit" name="order_edit_HP"/>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_9">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>参数：</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLineEdit" name="parameter_edit_HP"/>
+              </item>
+              <item row="4" column="0">
+               <widget class="QPushButton" name="affirm_but_HP">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>确认</string>
+                </property>
+                <property name="iconSize">
+                 <size>
+                  <width>20</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </widget>
             <widget class="QWidget" name="page_3">
              <property name="geometry">
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>176</width>
-               <height>318</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
               <string>带通滤波器</string>
              </attribute>
-             <widget class="QLineEdit" name="parameter_edit_BP">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>130</y>
-                <width>154</width>
-                <height>24</height>
-               </rect>
-              </property>
-             </widget>
-             <widget class="QLineEdit" name="order_edit_BP">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>50</y>
-                <width>154</width>
-                <height>24</height>
-               </rect>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_11">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>80</y>
-                <width>154</width>
-                <height>50</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>50</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>参数：</string>
-              </property>
-             </widget>
-             <widget class="QPushButton" name="affirm_but_BP">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>260</y>
-                <width>154</width>
-                <height>28</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>确认</string>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>20</width>
-                <height>20</height>
-               </size>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_12">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>154</width>
-                <height>50</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>50</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>阶数：</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_13">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>150</y>
-                <width>154</width>
-                <height>50</height>
-               </rect>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>50</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>参数2：</string>
-              </property>
-             </widget>
-             <widget class="QLineEdit" name="parameter_edit_2_BP">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>210</y>
-                <width>154</width>
-                <height>24</height>
-               </rect>
-              </property>
-             </widget>
+             <layout class="QGridLayout" name="gridLayout_6">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_12">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>阶数：</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLineEdit" name="order_edit_BP"/>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_11">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>参数：</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLineEdit" name="parameter_edit_BP"/>
+              </item>
+              <item row="4" column="0">
+               <widget class="QLabel" name="label_13">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>参数2：</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="0">
+               <widget class="QLineEdit" name="parameter_edit_2_BP"/>
+              </item>
+              <item row="6" column="0">
+               <widget class="QPushButton" name="affirm_but_BP">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>确认</string>
+                </property>
+                <property name="iconSize">
+                 <size>
+                  <width>20</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </widget>
             <widget class="QWidget" name="page_2">
              <property name="geometry">
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>176</width>
-               <height>318</height>
+               <width>98</width>
+               <height>173</height>
               </rect>
              </property>
              <attribute name="label">
@@ -471,7 +398,7 @@
         <widget class="QGroupBox" name="groupBox_4">
          <property name="maximumSize">
           <size>
-           <width>200</width>
+           <width>400</width>
            <height>16777215</height>
           </size>
          </property>
@@ -605,7 +532,7 @@
         <widget class="QGroupBox" name="groupBox_6">
          <property name="maximumSize">
           <size>
-           <width>200</width>
+           <width>400</width>
            <height>16777215</height>
           </size>
          </property>
@@ -616,7 +543,7 @@
           <item row="0" column="0">
            <widget class="QToolBox" name="type_toolBox_fir">
             <property name="currentIndex">
-             <number>0</number>
+             <number>3</number>
             </property>
             <property name="tabSpacing">
              <number>7</number>
@@ -626,8 +553,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>179</width>
-               <height>297</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
@@ -725,6 +652,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>Kaiser参数：</string>
                 </property>
@@ -766,8 +699,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>179</width>
-               <height>259</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
@@ -808,6 +741,12 @@
               </item>
               <item>
                <widget class="QLabel" name="label_7">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>窗口函数：</string>
                 </property>
@@ -852,6 +791,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>Kaiser参数：</string>
                 </property>
@@ -893,8 +838,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>179</width>
-               <height>312</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
@@ -951,6 +896,12 @@
               </item>
               <item>
                <widget class="QLabel" name="label_8">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>窗口函数：</string>
                 </property>
@@ -995,6 +946,12 @@
                 <property name="enabled">
                  <bool>false</bool>
                 </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>Kaiser参数：</string>
                 </property>
@@ -1036,8 +993,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>179</width>
-               <height>312</height>
+               <width>380</width>
+               <height>348</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1094,6 +1051,12 @@
               </item>
               <item>
                <widget class="QLabel" name="label_18">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
+                </property>
                 <property name="text">
                  <string>窗口函数：</string>
                 </property>
@@ -1137,6 +1100,12 @@
                <widget class="QLabel" name="kai_lab_BS">
                 <property name="enabled">
                  <bool>false</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>50</height>
+                 </size>
                 </property>
                 <property name="text">
                  <string>Kaiser参数：</string>
@@ -1195,7 +1164,7 @@
         <widget class="QGroupBox" name="groupBox_7">
          <property name="maximumSize">
           <size>
-           <width>200</width>
+           <width>400</width>
            <height>16777215</height>
           </size>
          </property>
