--- a/SpeechSignalAnalysisSystem/mainwindow.ui
+++ b/SpeechSignalAnalysisSystem/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1279</width>
-    <height>714</height>
+    <height>738</height>
    </rect>
   </property>
   <property name="mouseTracking">
@@ -21,40 +21,95 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="3">
-     <widget class="QScrollBar" name="horizontalScrollBar">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QPushButton" name="zoomOut_but">
-      <property name="text">
-       <string>缩小</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="zoomIn_but">
-      <property name="text">
-       <string>放大</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="2">
-     <widget class="QPushButton" name="reset_but">
-      <property name="text">
-       <string>重置</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="4">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <item row="0" column="0">
      <widget class="QCustomPlot" name="waveform_wid_1" native="true">
       <property name="mouseTracking">
        <bool>false</bool>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="zoomIn_but">
+        <property name="text">
+         <string>放大</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="zoomOut_but">
+        <property name="text">
+         <string>缩小</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="reset_but">
+        <property name="text">
+         <string>重置</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -64,7 +119,7 @@
      <x>0</x>
      <y>0</y>
      <width>1279</width>
-     <height>26</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -80,13 +135,14 @@
      <string>新建</string>
     </property>
     <addaction name="newsinglewav_act"/>
-    <addaction name="newdoublewav_act"/>
    </widget>
    <widget class="QMenu" name="newWindow_menu">
-    <property name="title">
-     <string>新界面</string>
+    <property name="enabled">
+     <bool>true</bool>
     </property>
-    <addaction name="windowopen"/>
+    <property name="title">
+     <string/>
+    </property>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -101,24 +157,28 @@
     <addaction name="freqResp_act"/>
     <addaction name="winFunc_act"/>
    </widget>
+   <widget class="QMenu" name="menu_5">
+    <property name="title">
+     <string>帮助</string>
+    </property>
+    <addaction name="helpAction"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
    <addaction name="menu_4"/>
    <addaction name="menu_3"/>
    <addaction name="newWindow_menu"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <addaction name="menu_5"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="play_act">
    <property name="text">
     <string>播放</string>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </action>
   <action name="periodwind_open_act">
@@ -130,6 +190,11 @@
    <property name="text">
     <string>频谱分析</string>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </action>
   <action name="filterwind_open_act">
    <property name="text">
@@ -140,15 +205,27 @@
    <property name="text">
     <string>从文件读取（.wav）</string>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </action>
   <action name="newsinglewav_act">
    <property name="text">
-    <string>录制单声道</string>
+    <string>新建wav</string>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </action>
   <action name="newdoublewav_act">
-   <property name="text">
-    <string>录制双声道</string>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </action>
   <action name="windowopen">
@@ -165,10 +242,20 @@
    <property name="text">
     <string>频率响应</string>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
   </action>
   <action name="winFunc_act">
    <property name="text">
     <string>窗口函数</string>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
   </action>
   <action name="actionp">
@@ -179,6 +266,11 @@
   <action name="actionp_2">
    <property name="text">
     <string>语谱分析</string>
+   </property>
+  </action>
+  <action name="helpAction">
+   <property name="text">
+    <string>帮助文档</string>
    </property>
   </action>
  </widget>
